test_suite/tests/ui/duplicate-attribute/with-and-serialize-with.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(with = "w", serialize_with = "s")]
    x: (),
}

fn main() {}
